markdown-pages/ja/tidb/release-6.1/cost-model.md
---
title: Cost Model
summary: Learn how the cost model used by TiDB works during physical optimization.
---

# コストモデル {#cost-model}

TiDB はコスト モデルを使用して、 [物理的最適化](/sql-physical-optimization.md)の間にインデックスと演算子を選択します。このプロセスを次の図に示します。

![CostModel](https://docs-download.pingcap.com/media/images/docs/cost-model.png)

TiDB は、プラン (HashJoin や IndexJoin など) 内の各インデックスのアクセス コストと各物理演算子の実行コストを計算し、最小コストのプランを選択します。

以下は、コスト モデルがどのように機能するかを説明する簡単な例です。テーブル`t`があるとします。

```sql
mysql> SHOW CREATE TABLE t;
+-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| Table | Create Table                                                                                                                                                                                        |
+-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| t     | CREATE TABLE `t` (
  `a` int(11) DEFAULT NULL,
  `b` int(11) DEFAULT NULL,
  `c` int(11) DEFAULT NULL,
  KEY `b` (`b`),
  KEY `c` (`c`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_bin |
+-------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
1 row in set (0.00 sec)
```

`SELECT * FROM t WHERE b < 100 and c < 100`ステートメントを実行するとき、TiDB が 20 行が`b < 100`条件を満たし、500 行が`c < 100`を満たすと推定し、 `INT`の型インデックスの長さが 8 であると仮定します。次に、TiDB は 2 つのインデックスのコストを計算します。

-   インデックス`b`のコスト = `b < 100`の行数 * インデックス`b`の長さ = 20 * 8 = 160
-   インデックス`c`のコスト = `c < 100`の行数 * インデックス`c`の長さ = 500 * 8 = 4000

インデックス`b`のコストが低いため、TiDB はインデックスとして`b`を選択します。

前の例は簡略化されており、基本原則を説明するためにのみ使用されています。実際の SQL 実行では、TiDB のコスト モデルはより複雑です。
